--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,3 +1,14 @@
-<p>
-  todos works!
-</p>
+<h3>Add Todo</h3>
+
+<form (submit)="addTodo()">
+  <input type="text" [(ngModel)]="text" name="text">
+</form>
+
+
+<h3>Todo list</h3>
+
+<ul>
+  <li *ngFor="let todo of todos">
+    {{todo.text}} <button (click)="deleteTodo(todo.text)">x</button>
+  </li>
+</ul>
