complete a2todo app with bootstrap

--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,14 +1,21 @@
-<h3>Add Todo</h3>
+<div *ngIf="appState == 'default'">
+   <h3>Add Todo</h3>
+  <form (submit)="addTodo()">
+    <input class="form-control" type="text" [(ngModel)]="text" name="text">
+  </form>
+</div>
 
-<form (submit)="addTodo()">
-  <input type="text" [(ngModel)]="text" name="text">
-</form>
-
+<div *ngIf="appState == 'edit'">
+   <h3>Edit Todo</h3>
+  <form (submit)="updateTodo()">
+    <input class="form-control" type="text" [(ngModel)]="text" name="text">
+  </form>
+</div>
 
 <h3>Todo list</h3>
 
-<ul>
-  <li *ngFor="let todo of todos">
-    {{todo.text}} <button (click)="deleteTodo(todo.text)">x</button>
+<ul class="list-group">
+  <li *ngFor="let todo of todos" class="list-group-item">
+    <span (click)="editTodo(todo)">{{todo.text}} </span><button class="btn btn-danger btn-tiny" (click)="deleteTodo(todo.text)">x</button>
   </li>
 </ul>
