add non empty input validation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,8 @@
       <a class="navbar-brand" href="#">A2Todos</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-
+      <ul class="nav navbar-nav pull-right">
+        <li><a href="http://nataliakielbicka.pl" target="_blank">Natalia Kiełbicka</a></li>
       </ul>
     </div>
     <!--/.nav-collapse -->
