--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -2,9 +2,8 @@
    <h3>Add Todo</h3>
   <form (submit)="addTodo()">
     <input class="form-control" type="text" [(ngModel)]="text" name="text">
-  
-      <div id="danger"></div>
-   
+    
+    <div *ngIf="!hideError" class='alert alert-danger'>You have to fill in this field!</div>  
   </form>
 </div>
 
