--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-inverse">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+        aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -11,16 +12,16 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav pull-right">
+        <li><a routerLink="/todos" routerLinkActive="active">Todos</a></li>
+        <li><a routerLink="/about" routerLinkActive="active">About</a></li>
         <li><a href="http://nataliakielbicka.pl" target="_blank">Natalia Kiełbicka</a></li>
       </ul>
     </div>
     <!--/.nav-collapse -->
   </div>
 </nav>
-
 <div class="container">
   <div class="row">
-    <app-todos></app-todos>
-    <app-about-me></app-about-me>
+    <router-outlet></router-outlet>
   </div>
 </div>
